--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -253,6 +253,11 @@ h6 a {
   border: 0;
 }
 
+h1 {
+  font-size: 2.3em;
+  line-height: 1.5em;
+}
+
 h2 {
   font-size: 2em;
   line-height: 1.5em;
@@ -2853,6 +2858,21 @@ ul.actions.fit.stacked {
   }
 }
 
+/* Skill icons */
+.skills-box {
+  display: flex;
+  justify-content: space-around;
+}
+
+#skills .container header h1,
+#skills .container header h2 {
+  margin: 0;
+}
+
+img.skills {
+  max-width: 100px;
+}
+
 /* Table */
 
 .table-wrapper {
@@ -3908,6 +3928,10 @@ body.is-touch #banner {
   select,
   textarea {
     font-size: 12pt;
+  }
+
+  h1 {
+    font-size: 1.8em;
   }
 
   h2 {
