--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2625,7 +2625,7 @@ input[type="radio"] + label:before {
   overflow: hidden;
 }
 
-.image:before {
+/* .image:before {
   content: "";
   display: block;
   position: absolute;
@@ -2635,7 +2635,7 @@ input[type="radio"] + label:before {
   width: 100%;
   height: 100%;
   z-index: 1;
-}
+} */
 
 .image img {
   border-radius: 4px;
@@ -3679,9 +3679,11 @@ body.landing #header {
 }
 
 #banner .content .image img {
-  border-radius: 100%;
+  /* border-radius: 100%; */
+  position: relative;
   display: block;
   width: 100%;
+  top: -1em;
 }
 
 body.is-touch #banner {
